--- a/src/main/resources/templates/trips/search_trip_result.html
+++ b/src/main/resources/templates/trips/search_trip_result.html
@@ -1,7 +1,20 @@
 <!DOCTYPE HTML>
-<html>
-<html>
+<html xmlns:th="https://www.thymeleaf.org">
 <body>
 <p>Search Result</p>
+<table>
+    <tr>
+        <th>TO station:</th>
+        <th>FROM station:</th>
+        <th>Purchase</th>
+    </tr>
+    <th:block th:each="itinerary : ${SearchResult}">
+        <tr>
+            <td th:text="${itinerary.from.name}">...</td>
+            <td th:text="${itinerary.to.name}">...</td>
+            <td><a href="#">Add to cart</a></td>
+        </tr>
+    </th:block>
+</table>
 </body>
 </html>
