--- a/src/main/resources/templates/user/manage_user.html
+++ b/src/main/resources/templates/user/manage_user.html
@@ -8,7 +8,14 @@
 <form action="#" id="userProfileForm" method="post" th:action="@{/user/manage/submit}" th:object="${User}">
     <label>Name</label>
     <input id="userName" name="name" th:field="*{name}" type="text"/>
+    <br/>
+    <label>Email</label>
+    <input id="email" name="email" th:field="*{email}" type="text"/>
+    <br/>
     <button>Submit</button>
+</form>
+<form action="#" id="cancelEditForm" method="post" th:action="@{/user/manage/cancel}">
+    <button>Cancel</button>
 </form>
 </body>
 </html>
