fix(manage_profile): incorrect model attribute name

--- a/src/main/resources/templates/user/manage_user.html
+++ b/src/main/resources/templates/user/manage_user.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <p>Manage User Profile</p>
+<!--/*@thymesVar id="CurrentUser" type="edu.drexel.TrainDemo.user.models.User"*/-->
 <form action="#" id="userProfileForm" method="post" th:action="@{/user/manage/submit}" th:object="${CurrentUser}">
     <label>Name</label>
     <input id="userName" name="name" th:field="*{name}" type="text"/>
