Added Date filter and display to search
Added a date to the display and filter the results to only display
Itineraries by date.

--- a/src/main/resources/templates/trips/search_trip_result.html
+++ b/src/main/resources/templates/trips/search_trip_result.html
@@ -5,9 +5,10 @@
 <table>
     <tr>
         <th>TRIP ID</th>
-        <th>TO station</th>
-        <th>DEPARTURE time</th>
         <th>FROM station</th>
+        <th>DEPARTURE DATE</th>
+        <th>Time</th>
+        <th>TO station</th>
         <th>ARRIVAL time</th>
         <th>Purchase</th>
     </tr>
@@ -15,6 +16,7 @@
         <tr>
             <td th:text="${itinerary.trip.id}"></td>
             <td th:text="${itinerary.from.name}"></td>
+            <td th:text="${itinerary.departureDate}"></td>
             <td th:text="${itinerary.departure}"></td>
             <td th:text="${itinerary.to.name}"></td>
             <td th:text="${itinerary.arrival}"></td>
