feat: add checkout page

--- a/src/main/resources/templates/cart/view_cart.html
+++ b/src/main/resources/templates/cart/view_cart.html
@@ -24,6 +24,6 @@
         </tr>
     </th:block>
 </table>
-<button>Checkout</button>
+<a th:href="@{/checkout}" th:text="Checkout"/>
 </body>
 </html>
