feat(views): use fragments to enable site-wide style

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,7 @@
-.authenticated, .unauthenticated
-{
-    display:none;
+.authenticated, .unauthenticated {
+    display: none;
+}
+
+body {
+    padding-top: 60px;
 }
