--- a/src/main/resources/templates/checkout/view_order.html
+++ b/src/main/resources/templates/checkout/view_order.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js" type="text/javascript"></script>
+    <th:block th:replace="/fragments/base :: header"/>
 </head>
 <body>
+<th:block th:replace="/fragments/base :: navbar"/>
 <p>Checkout Form</p>
 <!--/*@thymesVar id="lastSuccessfulOrder" type="edu.drexel.TrainDemo.checkout.models.Order"*/-->
 <table th:object="${lastSuccessfulOrder}">
@@ -45,4 +46,7 @@
     </th:block>
 </table>
 </body>
+<footer>
+    <th:block th:replace="/fragments/base :: footer"/>
+</footer>
 </html>
