fix(view): added dropdown-menu-right to avoid menu going offscreen

--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -24,7 +24,6 @@
                 data-target="#navbarsExampleDefault" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -36,7 +35,7 @@
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
                        data-toggle="dropdown"
                        href="#" id="profile-name"></a>
-                    <div aria-labelledby="profile-name" class="dropdown-menu">
+                    <div aria-labelledby="profile-name" class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="/cart/view">View Cart</a>
                         <a class="dropdown-item" href="/user/manage">Manage Profile</a>
                         <a class="dropdown-item" href="#" onclick="logout()">Sign Out</a>
@@ -46,7 +45,7 @@
                     <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
                        data-toggle="dropdown"
                        href="#" id="unauthenticated-menu">Menu</a>
-                    <div aria-labelledby="unauthenticated-menu" class="dropdown-menu">
+                    <div aria-labelledby="unauthenticated-menu" class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" data-target="#signInModal" data-toggle="modal" href="#">Sign In</a>
                         <a class="dropdown-item" href="/cart/view">View Cart</a>
                     </div>
