--- a/src/main/resources/templates/cart/view_cart.html
+++ b/src/main/resources/templates/cart/view_cart.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <th:block th:replace="/fragments/base :: header"/>
+    <th:block th:replace="base :: header"/>
 </head>
 <body>
-<th:block th:replace="/fragments/base :: navbar"/>
+<th:block th:replace="base :: navbar"/>
 <p>Shopping Cart</p>
 <table>
     <tr>
@@ -32,6 +32,6 @@
 
 </body>
 <footer>
-    <th:block th:replace="/fragments/base :: footer"/>
+    <th:block th:replace="base :: footer"/>
 </footer>
 </html>
