--- a/src/main/resources/templates/checkout/checkout_success.html
+++ b/src/main/resources/templates/checkout/checkout_success.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <th:block th:replace="/fragments/base :: header"/>
+    <th:block th:replace="base :: header"/>
 </head>
 <body>
-<th:block th:replace="/fragments/base :: navbar"/>
+<th:block th:replace="base :: navbar"/>
 <p>Checkout Form</p>
 <!--/*@thymesVar id="lastSuccessfulOrder" type="edu.drexel.TrainDemo.checkout.models.Order"*/-->
 <table th:object="${lastSuccessfulOrder}">
@@ -47,6 +47,6 @@
 </table>
 </body>
 <footer>
-    <th:block th:replace="/fragments/base :: footer"/>
+    <th:block th:replace="base :: footer"/>
 </footer>
 </html>
