--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <th:block th:replace="/fragments/base :: header"/>
+    <div th:include="base :: header"/>
 </head>
 <body>
-<th:block th:replace="/fragments/base :: navbar"/>
+<th:block th:replace="base :: navbar"/>
 <main role="main">
     <div class="jumbotron">
         <div class="container">
@@ -31,6 +31,6 @@
 </main>
 </body>
 <footer>
-    <th:block th:replace="/fragments/base :: footer"/>
+    <th:block th:replace="base :: footer"/>
 </footer>
 </html>
