--- a/src/main/resources/templates/trips/search_trip.html
+++ b/src/main/resources/templates/trips/search_trip.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <th:block th:replace="/fragments/base :: header"/>
+    <th:block th:replace="base :: header"/>
 </head>
 <body>
-<th:block th:replace="/fragments/base :: navbar"/>
+<th:block th:replace="base :: navbar"/>
 <h1>Search Trips</h1>
 <!--/*@thymesVar id="TripSearchRequest" type="edu.drexel.TrainDemo.trips.models.TripSearchRequest"*/-->
 <form action="#" id="userProfileForm" method="post" th:action="@{/trips/search/submit}"
@@ -25,6 +25,6 @@
 </form>
 </body>
 <footer>
-    <th:block th:replace="/fragments/base :: footer"/>
+    <th:block th:replace="base :: footer"/>
 </footer>
 </html>
