--- a/src/main/resources/templates/user/manage_user.html
+++ b/src/main/resources/templates/user/manage_user.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <th:block th:replace="/fragments/base :: header"/>
+    <th:block th:replace="base :: header"/>
 </head>
 <body>
-<th:block th:replace="/fragments/base :: navbar"/>
+<th:block th:replace="base :: navbar"/>
 <h1>Manage User Profile</h1>
 <!--/*@thymesVar id="CurrentUser" type="edu.drexel.TrainDemo.user.models.User"*/-->
 <form id="userProfileForm" method="post" th:action="@{/user/manage/submit}" th:object="${CurrentUser}">
@@ -18,6 +18,6 @@
 </form>
 </body>
 <footer>
-    <th:block th:replace="/fragments/base :: footer"/>
+    <th:block th:replace="base :: footer"/>
 </footer>
 </html>
