--- a/src/main/resources/templates/checkout/checkout_form.html
+++ b/src/main/resources/templates/checkout/checkout_form.html
@@ -2,6 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <th:block th:replace="base :: header"/>
+    <script src="https://nosir.github.io/cleave.js/dist/cleave.min.js" type="text/javascript"></script>
 </head>
 <body>
 <th:block th:replace="base :: navbar"/>
@@ -11,12 +12,21 @@
 <!--/*@thymesVar id="CustomerBilling" type="edu.drexel.TrainDemo.checkout.models.Billing"*/-->
 <form id="userBillingForm" method="post" th:action="@{/checkout/submit}" th:object="${CustomerBilling}">
     <label>Credit Card</label>
-    <input th:field="*{creditCard}" type="text"/>
+    <input class="input-credit-card" th:field="*{creditCard}"/>
+    <br/>
+    <label>Email Address</label>
+    <input th:field="*{customerEmail}" type="email"/>
     <br/>
     <button>Submit</button>
 </form>
 </body>
 <footer>
     <th:block th:replace="base :: footer"/>
+    <script>
+        // credit card
+        const cleaveCreditCard = new Cleave('.input-credit-card', {
+            creditCard: true
+        });
+    </script>
 </footer>
 </html>
