--- a/src/main/resources/templates/admin/admin_portal.html
+++ b/src/main/resources/templates/admin/admin_portal.html
@@ -39,6 +39,11 @@
 
     <div id="paymentForm" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
+				<form action="#" th:action="@{/paymentForm}" th:object="${paymentForm}" method="post">
+    			<p>Name: <input type="text" th:field="*{name}" /></p>
+<!--        	<p>Message: <input type="text" th:field="*{content}" /></p>  -->
+        	<p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    		</form>
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia 
       </div>
     </div>
